--- a/.github/workflows/llm-review.yml
+++ b/.github/workflows/llm-review.yml
@@ -19,27 +19,48 @@ jobs:
       - name: Get PR diff
         id: diff
         run: |
-          git fetch origin ${{ github.base_ref }}
-          DIFF=$(git diff origin/${{ github.base_ref }}...HEAD)
+          git fetch origin ${{ github.event.pull_request.base.sha }} --depth=1
+          git fetch origin HEAD
+          DIFF=$(git diff --unified=5 origin/${{ github.event.pull_request.base.sha }}...HEAD | head -c 30000)  # Limite à 30k chars pour éviter token limits
           echo "diff<<EOF" >> $GITHUB_OUTPUT
           echo "$DIFF" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
       
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      
+      - name: Install Python dependencies
+        run: pip install google-generativeai
+      
       - name: Call LLM API
         id: llm
+        env:
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: |
-          RESPONSE=$(curl -s -X POST "https://api.gemini.com/v1/messages" \
-            -H "Authorization: Bearer ${{ secrets.GEMINI_API_KEY }}" \
-            -H "Content-Type: application/json" \
-            -d '{
-              "messages": [
-                {
-                  "role": "user",
-                  "content": "Tu es un relecteur de code expert. Analyse ce diff et fournis des pistes d'\''amélioration ou liste les bugs trouvés. Réponds en français.\n\n${{ steps.diff.outputs.diff }}"
-                }
-              ]
-            }')
-          REVIEW=$(echo "$RESPONSE" | jq -r '.choices[0].message.content // .candidates[0].content.parts[0].text // .content // $RESPONSE')
+          cat <<EOF > review_script.py
+          import os
+          import google.generativeai as genai
+
+          genai.configure(api_key=os.environ['GEMINI_API_KEY'])
+
+          model = genai.GenerativeModel('gemini-1.5-flash')
+
+          prompt = """Tu es un relecteur de code expert. Analyse ce diff et fournis des pistes d'amélioration ou liste les bugs trouvés. Réponds en français.
+
+          ${{ steps.diff.outputs.diff }}"""
+
+          try:
+              response = model.generate_content(prompt)
+              review = response.text.strip()
+          except Exception as e:
+              review = f"Erreur lors de la génération de la revue : {str(e)}"
+
+          print(review)
+          EOF
+
+          REVIEW=$(python review_script.py)
           echo "review<<EOF" >> $GITHUB_OUTPUT
           echo "$REVIEW" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
@@ -56,7 +77,15 @@ jobs:
             })
       
       - name: Send Personalized Emails
+        env:
+          MAIL_FROM: ${{ secrets.MAIL_FROM }}
+          MAIL_USERNAME: ${{ secrets.MAIL_USERNAME }}
+          MAIL_PASSWORD: ${{ secrets.MAIL_PASSWORD }}
         run: |
+          echo "::add-mask::${{ secrets.MAIL_FROM }}"
+          echo "::add-mask::${{ secrets.MAIL_USERNAME }}"
+          echo "::add-mask::${{ secrets.MAIL_PASSWORD }}"
+
           IFS=',' read -r -a emails <<< "${{ secrets.TEAM_EMAIL_LIST }}"
           declare -A interests
           IFS=',' read -r -a pairs <<< "${{ secrets.INTERESTS_MAP }}"
@@ -66,30 +95,39 @@ jobs:
             interests["$key"]="$value"
           done
           SUBJECT="Revue LLM pour PR #${{ github.event.pull_request.number }} par @${{ github.actor }}"
-          FROM="${{ secrets.MAIL_FROM }}"
-          USER="${{ secrets.MAIL_USERNAME }}"
-          PASS="${{ secrets.MAIL_PASSWORD }}"
           SERVER="smtp.gmail.com"
           PORT="465"
           REVIEW="${{ steps.llm.outputs.review }}"
           for to in "${emails[@]}"; do
             interest="${interests[$to]:-programmation}"
-            MOTIV_PROMPT="Génère un court paragraphe (3-4 phrases maximum) pour une introduction d'\''e-mail. Utilise une ANALOGIE tirée de '\''$interest'\'' pour motiver l'\''utilisateur à corriger le code et à réussir. Réponds en français."
-            MOTIV_RESP=$(curl -s -X POST "https://api.gemini.com/v1/messages" \
-              -H "Authorization: Bearer ${{ secrets.GEMINI_API_KEY }}" \
-              -H "Content-Type: application/json" \
-              -d '{
-                "messages": [
-                  {
-                    "role": "user",
-                    "content": "'"$MOTIV_PROMPT"'"
-                  }
-                ]
-              }')
-            MOTIV=$(echo "$MOTIV_RESP" | jq -r '.choices[0].message.content // .candidates[0].content.parts[0].text // .content // $MOTIV_RESP')
+            interest="${interest//_/ }"  # Remplace _ par espaces si besoin
+
+            cat <<EOF > motiv_script.py
+            import os
+            import google.generativeai as genai
+
+            genai.configure(api_key=os.environ['GEMINI_API_KEY'])
+
+            model = genai.GenerativeModel('gemini-1.5-flash')
+
+            prompt = """Génère un court paragraphe motivant (3-4 phrases maximum) pour une introduction d'email. 
+            Utilise une ANALOGIE créative et positive tirée de '$interest' pour inspirer l'utilisateur à corriger son code avec détermination, comme une quête victorieuse où chaque bug résolu mène à une réussite plus grande. 
+            Rends-le engageant, encourageant la persévérance et la créativité en programmation. Réponds en français."""
+
+            try:
+                response = model.generate_content(prompt)
+                motiv = response.text.strip()
+            except Exception as e:
+                motiv = f"Erreur lors de la génération de la motivation : {str(e)}"
+
+            print(motiv)
+            EOF
+
+            MOTIV=$(python motiv_script.py)
             BODY="Motivation\n\n$MOTIV\n\nVoici la revue générée par l'IA :\n\n$REVIEW"
-            curl --url "smtps://$SERVER:$PORT" --ssl-reqd \
-              --mail-from "$FROM" --mail-rcpt "$to" \
-              --user "$USER:$PASS" \
-              -T <(echo -e "From: $FROM\nTo: $to\nSubject: $SUBJECT\n\n$BODY")
+
+            printf "From: %s\nTo: %s\nSubject: %s\n\n%s" "$MAIL_FROM" "$to" "$SUBJECT" "$BODY" | \
+              curl --url "smtps://$SERVER:$PORT" --ssl-reqd \
+                --mail-from "$MAIL_FROM" --mail-rcpt "$to" \
+                --user "$MAIL_USERNAME:$MAIL_PASSWORD" --upload-file -
           done
