--- a/.github/workflows/llm-review.yml
+++ b/.github/workflows/llm-review.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   review_and_notify:
     runs-on: ubuntu-latest
+permissions:
+  contents: read
+  pull-requests: write
     steps:
       - uses: actions/checkout@v3
         with:
