--- a/.github/workflows/llm-review.yml
+++ b/.github/workflows/llm-review.yml
@@ -3,7 +3,7 @@ name: LLM Code Review
 on:
   pull_request:
     types: [opened, synchronize]
-    branches: [ devops ]
+    branches: [devops]
 
 jobs:
   review_and_notify:
@@ -26,9 +26,11 @@ jobs:
           git fetch origin ${{ github.event.pull_request.base.sha }} --depth=1
           git fetch origin HEAD
           DIFF=$(git diff --unified=5 origin/${{ github.event.pull_request.base.sha }}...HEAD | head -c 30000)
-          echo "diff<<EOF" >> $GITHUB_OUTPUT
-          echo "$DIFF" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+          {
+            echo "diff<<EOF"
+            echo "$DIFF"
+            echo "EOF"
+          } >> $GITHUB_OUTPUT
       
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -44,29 +46,31 @@ jobs:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: |
           cat <<EOF > review_script.py
-          import os
-          import google.generativeai as genai
+import os
+import google.generativeai as genai
 
-          genai.configure(api_key=os.environ['GEMINI_API_KEY'])
-          model = genai.GenerativeModel('gemini-1.5-flash')
+genai.configure(api_key=os.environ['GEMINI_API_KEY'])
+model = genai.GenerativeModel('gemini-1.5-flash')
 
-          prompt = """Tu es un relecteur de code expert. Analyse ce diff et fournis des pistes d'amélioration ou liste les bugs trouvés. Réponds en français.
+prompt = """Tu es un relecteur de code expert. Analyse ce diff et fournis des pistes d'amélioration ou liste les bugs trouvés. Réponds en français.
 
-          ${{ steps.diff.outputs.diff }}"""
+${{ steps.diff.outputs.diff }}"""
 
-          try:
-              response = model.generate_content(prompt)
-              review = response.text.strip()
-          except Exception as e:
-              review = f"Erreur lors de la génération de la revue : {str(e)}"
+try:
+    response = model.generate_content(prompt)
+    review = response.text.strip()
+except Exception as e:
+    review = f"Erreur lors de la génération de la revue : {str(e)}"
 
-          print(review)
-          EOF
+print(review)
+EOF
 
           REVIEW=$(python review_script.py)
-          echo "review<<EOF" >> $GITHUB_OUTPUT
-          echo "$REVIEW" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+          {
+            echo "review<<EOF"
+            echo "$REVIEW"
+            echo "EOF"
+          } >> $GITHUB_OUTPUT
       
       - name: Comment on PR
         uses: actions/github-script@v6
@@ -76,11 +80,12 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '**Revue LLM** @${{ github.actor }}\n\n${{ steps.llm.outputs.review }}'
+              body: `**Revue LLM** @${{ github.actor }}\n\n${{ steps.llm.outputs.review }}`
             })
       
       - name: Send Personalized Emails
         env:
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           MAIL_FROM: ${{ secrets.MAIL_FROM }}
           MAIL_USERNAME: ${{ secrets.MAIL_USERNAME }}
           MAIL_PASSWORD: ${{ secrets.MAIL_PASSWORD }}
@@ -97,33 +102,35 @@ jobs:
             value="${pair#*:}"
             interests["$key"]="$value"
           done
+
           SUBJECT="Revue LLM pour PR #${{ github.event.pull_request.number }} par @${{ github.actor }}"
           SERVER="smtp.gmail.com"
           PORT="465"
           REVIEW="${{ steps.llm.outputs.review }}"
+
           for to in "${emails[@]}"; do
             interest="${interests[$to]:-programmation}"
             interest="${interest//_/ }"
 
             cat <<EOF > motiv_script.py
-            import os
-            import google.generativeai as genai
+import os
+import google.generativeai as genai
 
-            genai.configure(api_key=os.environ['GEMINI_API_KEY'])
-            model = genai.GenerativeModel('gemini-1.5-flash')
+genai.configure(api_key=os.environ['GEMINI_API_KEY'])
+model = genai.GenerativeModel('gemini-1.5-flash')
 
-            prompt = """Génère un court paragraphe motivant (3-4 phrases maximum) pour une introduction d'email. 
-            Utilise une ANALOGIE créative et positive tirée de '$interest' pour inspirer l'utilisateur à corriger son code avec détermination. 
-            Réponds en français."""
+prompt = """Génère un court paragraphe motivant (3-4 phrases maximum) pour une introduction d'email. 
+Utilise une ANALOGIE créative et positive tirée de '$interest' pour inspirer l'utilisateur à corriger son code avec détermination. 
+Réponds en français."""
 
-            try:
-                response = model.generate_content(prompt)
-                motiv = response.text.strip()
-            except Exception as e:
-                motiv = f"Erreur lors de la génération de la motivation : {str(e)}"
+try:
+    response = model.generate_content(prompt)
+    motiv = response.text.strip()
+except Exception as e:
+    motiv = f"Erreur lors de la génération de la motivation : {str(e)}"
 
-            print(motiv)
-            EOF
+print(motiv)
+EOF
 
             MOTIV=$(python motiv_script.py)
             BODY="Motivation\n\n$MOTIV\n\nVoici la revue générée par l'IA :\n\n$REVIEW"
